fix button prompt & work on squares alignment

--- a/style.css
+++ b/style.css
@@ -21,12 +21,14 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-
+    max-width: 960px;
   }
+
   .newSquare {
     border: 1px solid black;
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
+    flex: 1 0 auto;
   }
 
   .hover {
